--- a/src/app/asignacion/asignacion.component.css
+++ b/src/app/asignacion/asignacion.component.css
@@ -139,3 +139,45 @@ font-weight: bold;
   width: 100%;
  
 }
+
+.atencionesreg{
+  width: 100%;
+    
+color: #c5c5c5;
+font-weight: bold;
+font-size: 15px;
+}
+
+.linea {
+  font: 18px ;
+  margin-top: 10px;
+  width: 100%;
+  text-align: center;
+}
+label.linea {
+  position: relative;
+  z-index: 1;
+}
+label.linea:before {
+  border-top: 2px solid #009688;
+  content: "";
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: -1;
+}
+label.linea span {
+
+  background: #fff;
+  padding: 0 15px;
+}
+
+
+.detalle2{
+  display: flex;
+    flex-direction: row;
+}
