--- a/src/app/pages/gest-users/gest-users/gest-users.component.css
+++ b/src/app/pages/gest-users/gest-users/gest-users.component.css
@@ -62,9 +62,7 @@ table {
 }
 
 .detalledata{
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
-    grid-template-rows: 60px;
+   
 }
 
 .largesize{
@@ -143,4 +141,16 @@ li a{
     font-size: large;
     font-weight: bold;
     color: black;
+}
+
+.group-item{
+    display: flex;
+    flex-wrap: wrap;
+}
+.group-item .item-info{
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  margin-right: 25px;
+  margin-bottom: 25px;
 }
