--- a/src/app/reg-dato-psicologo/reg-dato-psicologo.component.html
+++ b/src/app/reg-dato-psicologo/reg-dato-psicologo.component.html
@@ -1,4 +1,7 @@
-
+<head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+</head>
 <div class="fondo">
   <div class="button-return">
     <button (click)="volver()"><mat-icon>login</mat-icon>Login</button>
