--- a/src/app/reportes/reportes/reportes.component.html
+++ b/src/app/reportes/reportes/reportes.component.html
@@ -18,7 +18,8 @@
                         por ...</mat-label>
                     <input matInput (keyup)="applyFilter($event)" #input>
                 </mat-form-field>
-                <mat-form-field appearance="fill">
+                <button type="button" data-target="#exampleModal" data-toggle="modal"   (click)="cargartodas()" class="btn btn-info" style="height: 40px;margin-top: 19px;"><img src="assets/estadistica.png" alt="">Todos</button>
+                <mat-form-field  style="margin-top: 15px;">
                     <mat-label>Tipo</mat-label>
                     <mat-select [(ngModel)]="opcion">
                         <mat-option value="estudiante" (click)="buscar()">Estudiante</mat-option>
@@ -73,7 +74,7 @@
                             src="https://cdn-icons-png.flaticon.com/512/3309/3309960.png"
                             style="cursor: pointer;" (click)="mostrar(element.idpersonal,element.nombre,element.apellido)" alt=""
                             data-toggle="modal"
-                            data-target=".bd-example-modal-lg"> </td>
+                            data-target="#personalest"> </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -97,7 +98,7 @@
     <!-- Large modal -->
 
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+    <div class="modal fade bd-example-modal-lg" id="personalest" tabindex="-1" role="dialog"
         aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
@@ -145,6 +146,60 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Large modal -->
+
+
+<div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+       <div class="modal-header">
+                    <h6 class="modal-title" style="text-transform: capitalize;color: #8ea2c6;font-size: 20px;" id="exampleModalLongTitle">
+                        <img style="width: 25px; height: 25px;" src="https://e7.pngegg.com/pngimages/728/955/png-clipart-bar-chart-computer-icons-statistics-bar-chart-angle-text.png" alt="">
+                        Estadisticas de los {{opcion}}
+                    </h6>
+                    <button type="button" class="close" data-dismiss="modal"
+                        aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="fechas">
+                        <button mat-raised-button (click)="cargartodas()">Todos los registros</button>
+                        <div style="display: flex;align-items: center;">
+                            <label >F.Inicio:</label>
+                            <input type="date" [(ngModel)]="fechai">
+                            <label >F.Fin:</label>
+                            <input type="date"  [(ngModel)]="fechaf">
+                            <button type="button" (click)="buscarfechasdetodos()" class="btn btn-info" style="padding: 0;height: 22px;width: auto;" [disabled]="!fechai && !fechaf"><mat-icon style="margin:0;">search</mat-icon></button>
+                        </div>
+                        
+                    </div>
+                    <div >
+                        <div style="display: block;" >
+                            <canvas baseChart 
+                              [datasets]="barChartData"
+                              [labels]="barChartLabels"
+                              [options]="barChartOptions"
+                              [plugins]="barChartPlugins"
+                              [legend]="barChartLegend"
+                              [colors]="chartColors"
+                              [chartType]="barChartType">
+                          
+                            </canvas>
+                          </div>
+                          
+                        
+
+                    </div>
+
+                </div>
+    </div>
+  </div>
+</div>
+
+
 
 
 
