--- a/src/app/pages/Perfil/datos-user/datos-user.component.html
+++ b/src/app/pages/Perfil/datos-user/datos-user.component.html
@@ -253,7 +253,7 @@
             <label style="margin-left: 10%;">{{horario.dia}}</label>
             <label style="margin-left: 20%;">{{horario.horai + ' - ' +
               horario.horaf}}</label>
-            <mat-icon style="margin-left: 30%;cursor: pointer;"
+            <mat-icon style="margin-left: 30%;cursor: pointer; color: red;"
               (click)="eliminarhor(horario.idhorario,horario.dia)">delete</mat-icon>
           </li>
         </ul>
