--- a/src/app/asignacion/psicologo/psicologo.component.html
+++ b/src/app/asignacion/psicologo/psicologo.component.html
@@ -40,8 +40,8 @@
 
       <!-- Symbol Column -->
       <ng-container matColumnDef="colegiatura">
-        <th mat-header-cell *matHeaderCellDef>Colegiatura</th>
-        <td mat-cell  [ngClass]="{'highligth': element.nombre == especialistaselec.nombre}" *matCellDef="let element">{{element.colegiatura}}</td>
+        <th mat-header-cell *matHeaderCellDef>Universidad</th>
+        <td mat-cell  [ngClass]="{'highligth': element.nombre == especialistaselec.nombre}" *matCellDef="let element">{{element.universidad}}</td>
       </ng-container>
 
       <!-- Symbol Column -->
@@ -75,7 +75,7 @@
     <button mat-flat-button (click)="cancelar()">
           Cancelar
     </button>
-    <button mat-raised-button (click)="asignarpaciente()" [disabled]="especialistaselec.length>0 ? null :'disabled' "   >Asignar</button>
+    <button mat-raised-button (click)="asignarpaciente()"   >Asignar</button>
    
   </div>
 
