--- a/src/app/pages/Perfil/datos-user/datos-user.component.css
+++ b/src/app/pages/Perfil/datos-user/datos-user.component.css
@@ -8,7 +8,7 @@
   body{
       width: 100%;
       height: 100%;
-      background-color: #dedbe4;
+      background-color:white;
       padding-top: 5vh;
 
 
@@ -21,7 +21,7 @@
     left: 15.2vw;
     display: flex;
     margin: 20px auto 0px auto;
-    border-radius: 50%;
+  
     transition: ease;
     position: absolute;
     z-index: 3;
@@ -40,7 +40,7 @@
     height: 53%;
     display: flex;
     margin: 20px auto 0px auto;
-    border-radius: 50%;
+  
  
 }
 
@@ -49,7 +49,7 @@
     width: 100%;
     height: 100%;
    
-    border-radius: 50%;
+    
 }
 
 .fotoclass{
@@ -66,7 +66,7 @@
     width: 100%;
     height: 35%;
   
-
+ color: white;
     margin-top: 10px;
 }
 
@@ -141,7 +141,7 @@ ul{
  .cardrigth{
      width: 30%;
      height: 100%;
-     background: #01a89e
+     background: #363443
  }
 .cardleft{
     width: 70%;
@@ -162,7 +162,7 @@ ul{
 h4 {
     overflow: hidden;
     text-align: start;
-    color: #87cbcc;
+    color: #363443;
     font-weight: bold;
 }
 
@@ -190,7 +190,7 @@ h4 {
 
 h4:before,
 h4:after {
-    background-color: #01a89e;
+    background-color: #fab044;
     content: "";
 
     
@@ -269,7 +269,7 @@ fieldset{
     min-height: 40px;
     margin-bottom: 15px;
     width: 100%;
-  background: linear-gradient(to top, rgb(1 168 158) 0%, #a7c2c5 100%);
+  background: #fab044;
   }
 
   .savebtns{
@@ -286,7 +286,7 @@ fieldset{
       justify-content: center;
   }
   .editbtn{
-    background-color: #3a94bb;
+    background-color: #363443;
     width: 7vw;
     border-radius: 10px;
     height: 30px;
