--- a/src/app/registros/registro-paciente/registro-paciente.component.html
+++ b/src/app/registros/registro-paciente/registro-paciente.component.html
@@ -113,7 +113,7 @@
                         </body>
 
                         <div class="btn-block-prob">
-                            <button mat-raised-button  class="btn-step" (click)="crearlista2()" matStepperNext>Siguiente</button>
+                            <button mat-raised-button  class="btn-step"  matStepperNext>Siguiente</button>
                         </div>
                     </form>
                 </mat-step>
