--- a/src/app/reportes/reportes/reportes.component.html
+++ b/src/app/reportes/reportes/reportes.component.html
@@ -48,16 +48,16 @@
 
                 <!-- Weight Column -->
                 <ng-container matColumnDef="especialidad">
-                    <th mat-header-cell *matHeaderCellDef> Especialidad </th>
+                    <th mat-header-cell *matHeaderCellDef> Correo </th>
                     <td mat-cell *matCellDef="let element">
-                        {{element.especialidad}} </td>
+                        {{element.correo}} </td>
                 </ng-container>
 
                 <!-- Symbol Column -->
                 <ng-container matColumnDef="universidad">
-                    <th mat-header-cell *matHeaderCellDef> Universidad </th>
+                    <th mat-header-cell *matHeaderCellDef> Tipo </th>
                     <td mat-cell *matCellDef="let element">
-                        {{element.universidad}} </td>
+                        {{element.tipo}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="telefono">
